# ASAP-Active_Symbolic_Accelerated_Platform-

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.md  README.md  START_HERE.md  USAGE.md  pyproject.toml
docs/: QUICKSTART.md
examples/: PROJECT_SUMMARY.md  config.example.py  readme.txt
examples/example-exe/predic/: INPUT_PREDICT
examples/example-exe/train/: INPUT
examples/example-exe/train/test_output/: model_info.json
examples/predict-example/: INPUT_PREDICT  README.md  data_for_prediction.csv  predictions.csv
examples/test-workdir/: INPUT  README.md
examples/test-workdir/test_output/: model_info.json
examples/test-workdir/test_output3/: active_learning_history.csv  model_info.json
install/: =0.8.0  INSTALL.md  PACKAGING_SUMMARY.md  PREDICTION_FEATURE_SUMMARY.md  RELEASE_NOTES.md  TEST_GUIDE.md  TEST_REPORT.md  install.sh  run.sh
scripts/: COMMAND_REFERENCE.md
scripts/config/: INPUT  INPUT_PREDICT  config_loader.py
scripts/python/: asap.py  sisso_predict.py  test_installation.py  workflow_active_learning_mace_fixed.py
scripts/sisso/nested_CV/: data.csv
scripts/tests/: test_config_loader.py
